# -*- coding: utf-8 -*-

[metadata]
name = donkeypart_game_controller
description = 'Donkey Car Game Controller Parts'
long_description = file:README.md
version = '1.0'
author = 'Tasuku Hori'
author_email = 'tasuku-hori@exa-corp.co.jp'
packages = ['donkeypart_game_controller']
url = https://github.com/coolerking/donkeypart_game_controller
license = file: LICENSE

[options]
install_requires =
    time
    evdev
    donkeypart_bluetooth_game_controller
    fcntl
    docopt
